fix: Renamed ff for Ask AI to new format (#1414)
This is to ensure smoother transition to flagsmith

--- a/app/server/appsmith-server/src/main/resources/features/init-flags.yml
+++ b/app/server/appsmith-server/src/main/resources/features/init-flags.yml
@@ -108,7 +108,7 @@ ff4j:
           - name: emails
             value: balaji@appsmith.com,vamsi@appsmith.com
 
-    - uid: CHAT_AI
+    - uid: ask_ai
       enable: true
       description: Enable code generation using OpenAI
       flipstrategy:
