--- a/app/client/package.json
+++ b/app/client/package.json
@@ -193,7 +193,7 @@
     "to-json-schema": "^0.2.5",
     "toposort": "^2.0.2",
     "tslib": "^2.3.1",
-    "typescript": "^4.5.5",
+    "typescript": "4.5.5",
     "unescape-js": "^1.1.4",
     "url-search-params-polyfill": "^8.0.0",
     "webfontloader": "^1.6.28",
