--- a/app/server/appsmith-server/src/main/resources/features/init-flags.yml
+++ b/app/server/appsmith-server/src/main/resources/features/init-flags.yml
@@ -8,6 +8,14 @@ ff4j:
   audit: false
 
   features:
+    - uid: DATASOURCE_ENVIRONMENTS
+      enable: true
+      description: Introducing multiple execution environments for datasources
+      flipstrategy:
+        class: com.appsmith.server.featureflags.strategies.EmailBasedRolloutStrategy
+        param:
+          - name: emails
+            value: me-eng1@appsmith.com, me-eng2@appsmith.com, me-qa1@appsmith.com, me-qa2@appsmith.com, me-demo@appsmith.com
 
     - uid: MULTIPLE_PANES
       enable: true
