--- a/.github/workflows/ci-debugging.yml
+++ b/.github/workflows/ci-debugging.yml
@@ -17,48 +17,48 @@ jobs:
       - name: Add a comment on the PR with link to workflow run
         uses: peter-evans/create-or-update-comment@v2
         with:
-          issue-number: ${{ github.event.client_payload.pull_request.number }}
+          issue-number: 23073
           body: |
             Tests running at: <${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}>.
             Workflow: `${{ github.workflow }}`.
             Commit: `${{ github.event.client_payload.slash_command.args.named.sha }}`.
-            PR: ${{ github.event.client_payload.pull_request.number }}.
-            Perf tests will be available at <https://app.appsmith.com/app/performance-infra-dashboard/pr-details-638dd7cd2913ba43778b915e?pr=${{ github.event.client_payload.pull_request.number }}&runId=${{ github.run_id }}_${{github.run_attempt}}>
+            PR: 23073.
+            Perf tests will be available at <https://app.appsmith.com/app/performance-infra-dashboard/pr-details-638dd7cd2913ba43778b915e?pr=23073&runId=${{ github.run_id }}_${{github.run_attempt}}>
 
   server-build:
     name: server-build
     uses: ./.github/workflows/server-build.yml
     secrets: inherit
     with:
-      pr: ${{ github.event.client_payload.pull_request.number }}
+      pr: 23073
 
   client-build:
     name: client-build
     uses: ./.github/workflows/client-build.yml
     secrets: inherit
     with:
-      pr: ${{ github.event.client_payload.pull_request.number }}
+      pr: 23073
 
   rts-build:
     name: rts-build
     uses: ./.github/workflows/rts-build.yml
     secrets: inherit
     with:
-      pr: ${{ github.event.client_payload.pull_request.number }}
+      pr: 23073
 
   test-shared-modules:
     name: shared-modules
     uses: ./.github/workflows/shared-modules.yml
     secrets: inherit
     with:
-      pr: ${{ github.event.client_payload.pull_request.number }}
+      pr: 23073
 
   test-appsmithctl:
     name: appsmithctl
     uses: ./.github/workflows/appsmithctl.yml
     secrets: inherit
     with:
-      pr: ${{ github.event.client_payload.pull_request.number }}
+      pr: 23073
 
   build-docker-image:
     needs: [ client-build, server-build, rts-build ]
@@ -68,7 +68,7 @@ jobs:
     uses: ./.github/workflows/build-docker-image.yml
     secrets: inherit
     with:
-      pr: ${{ github.event.client_payload.pull_request.number }}
+      pr: 23073
 
   ci-test:
     needs: [ build-docker-image ]
@@ -78,7 +78,7 @@ jobs:
     uses: ./.github/workflows/ci-test.yml
     secrets: inherit
     with:
-      pr: ${{ github.event.client_payload.pull_request.number }}
+      pr: 23073
 
   # perf-test:
   #   needs: [ build-docker-image ]
@@ -88,7 +88,7 @@ jobs:
   #   uses: ./.github/workflows/perf-test.yml
   #   secrets: inherit
   #   with:
-  #     pr: ${{ github.event.client_payload.pull_request.number }}
+  #     pr: 23073
 
   ci-test-result:
     needs: [ci-test, perf-test ]
@@ -167,7 +167,7 @@ jobs:
         if: needs.ci-test.result != 'success'
         uses: peter-evans/create-or-update-comment@v1
         with:
-          issue-number: ${{ github.event.client_payload.pull_request.number }}
+          issue-number: 23073
           body: |
             Workflow run: <${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}>.
             Commit: `${{ github.event.client_payload.slash_command.args.named.sha }}`.
@@ -178,7 +178,7 @@ jobs:
         if: needs.ci-test.result == 'success'
         uses: peter-evans/create-or-update-comment@v1
         with:
-          issue-number: ${{ github.event.client_payload.pull_request.number }}
+          issue-number: 23073
           body: |
             Workflow run: <${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}>.
             Commit: `${{ github.event.client_payload.slash_command.args.named.sha }}`.
@@ -193,7 +193,7 @@ jobs:
         env:
           run_id: ${{ github.run_id }}
           repository: ${{ github.repository }}
-          number: ${{ github.event.client_payload.pull_request.number }}
+          number: 23073
           job: ${{ github.job }}
           # Conveniently, job.status maps to https://developer.github.com/v3/checks/runs/#update-a-check-run
           conclusion: ${{ job.status }}
@@ -276,7 +276,7 @@ jobs:
   #       env:
   #         run_id: ${{ github.run_id }}
   #         repository: ${{ github.repository }}
-  #         number: ${{ github.event.client_payload.pull_request.number }}
+  #         number: 23073
   #         job: ${{ github.job }}
   #         # Conveniently, job.status maps to https://developer.github.com/v3/checks/runs/#update-a-check-run
   #         conclusion: ${{ job.status }}
