--- a/.github/workflows/sync-community-repo.yml
+++ b/.github/workflows/sync-community-repo.yml
@@ -158,6 +158,6 @@ jobs:
           )"
 
           curl https://slack.com/api/chat.postMessage \
-            --header 'Authorization: Bearer {{ secrets.SLACK_APPSMITH_ALERTS_TOKEN }}' \
+            --header 'Authorization: Bearer ${{ secrets.SLACK_APPSMITH_ALERTS_TOKEN }}' \
             --header 'Content-Type: application/json; charset=utf-8' \
             --data-raw "$body"
