fix: enable SelectButton unit tests

--- a/app/client/tsconfig.json
+++ b/app/client/tsconfig.json
@@ -26,9 +26,9 @@
     "sourceMap": true,
     "baseUrl": "./src",
     "noFallthroughCasesInSwitch": true,
-    "importsNotUsedAsValues": "error"
+    "importsNotUsedAsValues": "error",
   },
   "include": [
-    "./src/**/*"
+    "./src/**/*",
   ],
 }
