feat: Auto Layout editor for everyone (#23005)
This PR removes feature flag for Auto Layout so that the new Auto Layout
editor is available for all the users.

--- a/app/server/appsmith-server/src/main/resources/features/init-flags.yml
+++ b/app/server/appsmith-server/src/main/resources/features/init-flags.yml
@@ -82,12 +82,12 @@ ff4j:
 
     - uid: AUTO_LAYOUT
       enable: true
-      description: Enable auto layout editor by email domain of user.
+      description: Enable auto layout editor for everyone
       flipstrategy:
-        class: com.appsmith.server.featureflags.strategies.EmailBasedRolloutStrategy
+        class: org.ff4j.strategy.PonderationStrategy
         param:
-          - name: emailDomains
-            value: appsmith.com,moolya.com
+          - name: weight
+            value: 1
 
     # Put EE flags below this line, to avoid conflicts.
 
