ci: workflow files for airgap (#1404)
## Description

Since we can't trigger `/ok-to-test` on the other
[PR](https://github.com/appsmithorg/appsmith-ee/pull/1403) because
ci-test needs the CYPRESS_EXCLUDE_TAGS and slash command doesn't
dispatch from current branch,

We can merge this PR first and run /ok-to-test on that PR to see how the
ok-to-test command behaves.

Here is the link to the workflow files which are on this branch except
the integaration-test-airgap one.

Non airgapped Image :
https://github.com/appsmithorg/appsmith-ee/actions/runs/4882238408
Airgapped Image :
https://github.com/appsmithorg/appsmith-ee/actions/runs/4882236821

Fixes [#22814](/appsmithorg/appsmith/issues/22814)


## Type of change

> Please delete options that are not relevant.

- New feature (non-breaking change which adds functionality)
- Chore (housekeeping or task changes that don't impact user perception)


## How Has This Been Tested?

- Manual
- Cypress

### Test Plan
> Add Testsmith test cases links that relate to this PR

### Issues raised during DP testing
> Link issues raised during DP testing for better visiblity and tracking
(copy link from comments dropped on this PR)


## Checklist:
### Dev activity
- [x] My code follows the style guidelines of this project
- [x] I have performed a self-review of my own code
- [ ] I have commented my code, particularly in hard-to-understand areas
- [ ] I have made corresponding changes to the documentation
- [x] My changes generate no new warnings
- [x] I have added tests that prove my fix is effective or that my
feature works
- [x] New and existing unit tests pass locally with my changes
- [ ] PR is being merged under a feature flag


### QA activity:
- [ ] Test plan has been approved by relevant developers
- [ ] Test plan has been peer reviewed by QA
- [ ] Cypress test cases have been added and approved by either SDET or
manual QA
- [ ] Organized project review call with relev

--- a/.github/workflows/perf-test.yml
+++ b/.github/workflows/perf-test.yml
@@ -9,6 +9,11 @@ on:
         description: "This is the PR number in case the workflow is being called in a pull request"
         required: false
         type: number
+      airgap-enabled:
+        description: "This flag is used to determine if the workflow is running for airgap"
+        required: false
+        type: string
+        default: "false"
 
 # Change the working directory for all the jobs in this workflow
 defaults:
@@ -112,17 +117,29 @@ jobs:
         run: |
           yarn global add serve
           echo "$(yarn global bin)" >> $GITHUB_PATH
-     
+
+      - name: Get docker image artifact name to download
+        run: |
+         if [[ '${{ inputs.airgap-enabled }}' == 'true' ]]; then
+          echo 'docker_container_name=airgap-cicontainer' >> "$GITHUB_ENV"
+         else
+          echo 'docker_container_name=cicontainer' >> "$GITHUB_ENV"
+          fi
+
+      - name: Log the docker container name
+        run: |
+          echo "docker_container_name: ${{ env.docker_container_name }}"
+
       - name: Download Docker image artifact
         uses: actions/download-artifact@v3
         with:
-          name: cicontainer
+          name: ${{ env.docker_container_name }}
 
       - name: Load Docker image from tar file
         working-directory: "."
         run: |
-          gunzip cicontainer.tar.gz
-          docker load -i cicontainer.tar
+          gunzip ${{ env.docker_container_name }}.tar.gz
+          docker load -i ${{ env.docker_container_name }}.tar
 
       - name: Create folder
         if: steps.run_result.outputs.run_result != 'success'
@@ -149,7 +166,7 @@ jobs:
             -e APPSMITH_DISABLE_TELEMETRY=true \
             -e APPSMITH_CLOUD_SERVICES_BASE_URL=http://host.docker.internal:5001 \
             --add-host=host.docker.internal:host-gateway \
-            cicontainer
+            ${{ env.docker_container_name }}
 
       # Start rts
       - name: Start RTS Server
