--- a/.github/workflows/on-demand-build-docker-image-deploy-preview.yml
+++ b/.github/workflows/on-demand-build-docker-image-deploy-preview.yml
@@ -122,11 +122,11 @@ jobs:
           name: client-build
           path: app/client
 
-#       - name: Unpack the client build artifact
-#         if: steps.run_result.outputs.run_result != 'success'
-#         run: |
-#           mkdir -p app/client/build
-#           tar -xvf app/client/build.tar -C app/client/build
+      - name: Unpack the client build artifact
+        if: steps.run_result.outputs.run_result != 'success'
+        run: |
+          mkdir -p app/client/build
+          tar -xvf app/client/build.tar -C app/client/build
 
       - name: Download the server build artifact
         uses: actions/download-artifact@v3
