ci: revert the file key since its a diff workflow run (#1445)
### Description
- Changed the key thinking it would clash, but since the /ok-to-test for
non airgap and airgap is running in a different workflow run, it
shouldn't.

--- a/.github/workflows/integration-tests-command-airgapped.yml
+++ b/.github/workflows/integration-tests-command-airgapped.yml
@@ -135,7 +135,7 @@ jobs:
         with:
           path: |
             ~/combined_failed_spec_ci
-          key: ${{ github.run_id }}-"ci-test-result-airgapped"
+          key: ${{ github.run_id }}-"ci-test-result"
           restore-keys: |
             ${{ github.run_id }}-${{ github.job }}
 
