--- a/.github/workflows/on-demand-build-docker-image-deploy-preview.yml
+++ b/.github/workflows/on-demand-build-docker-image-deploy-preview.yml
@@ -128,11 +128,11 @@ jobs:
       - id: git_hash
         run: echo "git_hash=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
 
-      - name: Download the client build artifact
+      - name: Download the react build artifact
         uses: actions/download-artifact@v3
         with:
           name: client-build
-          path: app/client
+          path: app/client/build.tar
 
       - name: Unpack the client build artifact
         if: steps.run_result.outputs.run_result != 'success'
