added workflow to run limited tests in ci

--- a/.github/workflows/build-client-server.yml
+++ b/.github/workflows/build-client-server.yml
@@ -20,3 +20,17 @@ jobs:
     with:
       pr: 0
       skip-tests: "true"
+
+  rts-build:
+    name: rts-build
+    uses: ./.github/workflows/rts-build.yml
+    secrets: inherit
+    with:
+      pr: 0
+
+  ci-test-limited:
+    name: ci-test-limited
+    uses: ./.github/workflows/ci-test-limited.yml
+    secrets: inherit
+    with:
+      pr: 0
