Added dependency on client, server and rts builds to run ci-limited check

--- a/.github/workflows/build-client-server.yml
+++ b/.github/workflows/build-client-server.yml
@@ -29,6 +29,7 @@ jobs:
       pr: 0
 
   ci-test-limited:
+    needs: [ client-build, server-build, rts-build ]
     name: ci-test-limited
     uses: ./.github/workflows/ci-test-limited.yml
     secrets: inherit
