--- a/app/client/cypress/package.json
+++ b/app/client/cypress/package.json
@@ -33,6 +33,7 @@
     "cypress-multi-reporters": "^1.2.4",
     "cypress-plugin-tab": "^1.0.5",
     "cypress-real-events": "^1.7.1",
+    "cypress-tags": "^1.1.2",
     "cypress-wait-until": "^1.7.2",
     "cypress-xpath": "^1.4.0",
     "diff": "^5.0.0",
