--- a/app/client/package.json
+++ b/app/client/package.json
@@ -269,6 +269,7 @@
     "cypress-network-idle": "^1.14.2",
     "cypress-plugin-tab": "^1.0.5",
     "cypress-real-events": "^1.7.1",
+    "cypress-tags": "^1.1.2",
     "cypress-wait-until": "^1.7.2",
     "cypress-xpath": "^1.4.0",
     "diff": "^5.0.0",
