fix: added data-testid for api response tab

--- a/app/client/package.json
+++ b/app/client/package.json
@@ -18,7 +18,7 @@
     "test:ci": "CYPRESS_BASE_URL=https://dev.appsmith.com cypress/test.sh --env=ci",
     "eject": "react-scripts eject",
     "start-prod": "REACT_APP_ENVIRONMENT=PRODUCTION craco start",
-    "cytest": "REACT_APP_TESTING=TESTING REACT_APP_ENVIRONMENT=DEVELOPMENT craco start & ./node_modules/.bin/cypress open",
+    "cytest": "REACT_APP_TESTING=TESTING REACT_APP_ENVIRONMENT=DEVELOPMENT craco start & ../node_modules/.bin/cypress open",
     "test:unit": "jest -b --colors --no-cache --silent --coverage --collectCoverage=true --coverageDirectory='../../' --coverageReporters='json-summary'",
     "test:jest": "jest --watch",
     "generate:widget": "plop --plopfile generators/index.js",
@@ -76,7 +76,7 @@
     "cypress-log-to-output": "^1.1.2",
     "dayjs": "^1.10.6",
     "deep-diff": "^1.0.2",
-    "design-system": "npm:@appsmithorg/design-system@2.1.9-alpha.17",
+    "design-system": "npm:@appsmithorg/design-system@2.1.9-alpha.19",
     "design-system-old": "npm:@appsmithorg/design-system-old@1.1.7-alpha.9",
     "downloadjs": "^1.4.7",
     "exceljs": "^4.3.0",
