--- a/app/client/cypress/locators/AppNavigation.json
+++ b/app/client/cypress/locators/AppNavigation.json
@@ -11,8 +11,8 @@
   "backToAppsButton": ".t--app-viewer-back-to-apps-button",
   "userProfileDropdownButton": ".t--profile-menu-icon",
   "userProfileDropdownMenu": ".ads-v2-menu",
-  "modal": ".bp3-dialog",
-  "modalClose": ".bp3-dialog .bp3-dialog-close-button",
+  "modal": "div[role=dialog]",
+  "modalClose": "div[role=dialog] button[aria-label='Close']",
   "navigationMenuItem": ".t--page-switch-tab",
   "appSettingsButton": "#t--app-settings-cta",
   "navigationSettingsTab": "#t--navigation-settings-header",
