fix: TopInline_spec

--- a/app/client/cypress/locators/AppNavigation.json
+++ b/app/client/cypress/locators/AppNavigation.json
@@ -24,15 +24,15 @@
     "navStyle": ".t--navigation-settings-navStyle",
     "colorStyle": ".t--navigation-settings-colorStyle",
     "orientationOptions": {
-      "top": ".t--navigation-settings-orientation .t--button-group-top",
-      "side": ".t--navigation-settings-orientation .t--button-group-side"
+      "top": ".t--navigation-settings-orientation .ads-v2-segmented-control-value-top",
+      "side": ".t--navigation-settings-orientation .ads-v2-segmented-control-value-side"
     },
     "navStyleOptions": {
-      "stacked": ".t--navigation-settings-navStyle .t--button-group-stacked",
-      "inline": ".t--navigation-settings-navStyle .t--button-group-inline"
+      "stacked": ".t--navigation-settings-navStyle .ads-v2-segmented-control-value-stacked",
+      "inline": ".t--navigation-settings-navStyle .ads-v2-segmented-control-value-inline"
     },
     "colorStyleOptions": {
-      "light": ".t--navigation-settings-colorStyle .t--button-group-light",
+      "light": ".t--navigation-settings-colorStyle .ads-v2-segmented-control-value-light",
       "theme": ".t--navigation-settings-colorStyle .ads-v2-segmented-control-value-theme"
     }
   },
