--- a/.github/workflows/ci-test-limited.yml
+++ b/.github/workflows/ci-test-limited.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   ci-test-limited:
     runs-on: ubuntu-latest
-    timeout-minutes: 50
+    #timeout-minutes: 50
     if: |
       github.event.pull_request.head.repo.full_name == github.repository ||
       github.event_name == 'push' ||
