--- a/.github/workflows/ci-test-limited.yml
+++ b/.github/workflows/ci-test-limited.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   ci-test-limited:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-8-cores
     #timeout-minutes: 50
     if: |
       github.event.pull_request.head.repo.full_name == github.repository ||
