--- a/.github/workflows/build-client-server.yml
+++ b/.github/workflows/build-client-server.yml
@@ -1,4 +1,4 @@
-name: Build client server without running tests
+name: Build client server without running Unit tests
 
 on:
   # This workflow can be triggered manually from the GitHub Actions page
